# WGSLTr

./: .bazelrc  MODULE.bazel  README.md  package.json  tsconfig.json
Repos/: repositories.bzl
Repos/Builds/: BUILD.antlr4  BUILD.argparse
Specs/: Analyzer.tla  Main.cfg  Main.tla  Rule.tla  Transformer.tla  Tree.tla  TreeMain.cfg  TreeMain.tla  WGSLTr.tla
Test/: info.ts
Test/tint/: tint.ts
Test/wgsl_samples/: A.wgsl  B.wgsl  abc.wgsl  huge.wgsl  inner.wgsl  inner2.wgsl
Test/wgsl_samples/circular/: A.wgsl  B.wgsl
Test/wgsl_samples/circular/Case1/: A.wgsl  C.wgsl
Test/wgsl_samples/wgsl_standard/: huge.wgsl
app/: BUILD.bazel  Config.h  WGSLTr.h  WGSLTr_Unittests.cc  main.cc
src/: Analyzer.h  BUILD.bazel  Transformer.h  Types.h  constants.ts  lang.ts  module.ts
src/analyzer/: analyzer.ts  semantic.ts
src/base/: graph.test.ts  graph.ts
src/generation/: obfuscate.ts  represent.test.ts  represent.ts  token_processors.ts
src/parser/: parser.test.ts  parser.ts  semantic.ts  utility.ts
wasms/: tree-sitter-wgsl.wasm
