module(
    name = "wgsltr",
    version = "0.0.1",
)

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
bazel_dep(name = "chameleon", version = "0.0.1")
