cc_binary(
    name = "WGSLTr",
    srcs = ["main.cc", "WGSLTr.cc", "WGSLTr.h", "Config.h",
            # Transformer
            "@wgsltr//src:transformer_srcs"],
    deps = ["@argparse//:argparse",
            "@chameleon//:chameleon",
            "@antlr4_runtime//:antlr4_runtime"],
    copts = ["-DENABLE_GC=false"],
    includes = ["../src"],
)
